--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <html lang="pt-br">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="assets/imgs/favicon.ico" rel="shortcut icon">
-    <link href="assets/css/style.css" rel="stylesheet">
-    <script src="assets/js/neo-medias.min.js"></script>
+    <link rel="stylesheet" href="src/style.css">
+
+    <!-- Import css neonmedia -->
+    <link rel="stylesheet" href="assets/css/neon-media.css">
+
+    <!-- Import of Neonmedia Script -->
+    <script src="assets/js/neon-media.min.js"></script>
 
     <title>Neon Medias - Sample</title>
+
 </head>
 
 <body>
-
-    <script>NeonMedias.start();</script>
+    <!-- Call the function -->
+    <script>
+        NeonMedias._start();
+    </script>
 </body>
 
 </html>
